force-app/main/default/objects/CEMS_Job_Application__c/fields/Back_Ground_Verification__c.field-meta.xml
<CustomField>
    <fullName>Back_Ground_Verification__c</fullName>
    <label>Back Ground Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Additional infromation required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>