force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Basic_Pay__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Basic_Pay__c</fullName>
    <formula>Offered_salary__c * 0.4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>