force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Bonus__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Bonus__c</fullName>
    <formula>Offered_salary__c *0.07</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>