force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Company_Benefits_Plan__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Company_Benefits_Plan__c</fullName>
    <formula>Offered_salary__c * 0.19876</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Benefits Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>