force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Company_Name__c</fullName>
    <label>Company Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>