force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Current_Position__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Current_Position__c</fullName>
    <formula>CEMS_Personnel__r.CEMS_Position__c</formula>
    <label>Current Position</label>
    <type>Text</type>
</CustomField>