force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Email_Notification__c</fullName>
    <label>Email Notification</label>
    <length>20</length>
    <type>Text</type>
</CustomField>