force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Gratuity__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Gratuity__c</fullName>
    <formula>Offered_salary__c * 0.02124</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gratuity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>