force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Health_Benefits__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Health_Benefits__c</fullName>
    <formula>Offered_salary__c * 0.012</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Benefits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>