force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Hike_Percentage__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Hike_Percentage__c</fullName>
    <formula>IF(( CEMS_Negotiated_Salary__c = 0), Null, ((CEMS_Negotiated_Salary__c - Budget_Allotted__c )/ Budget_Allotted__c))</formula>
    <label>Hike Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>