force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_HRA__c.field-meta.xml
<CustomField>
    <fullName>CEMS_HRA__c</fullName>
    <formula>Offered_salary__c * 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HRA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>