force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Interview_Result__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Interview_Result__c</fullName>
    <label>Interview Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>