force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Joining_Status__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Joining_Status__c</fullName>
    <label>Joining Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joined</fullName>
            </value>
            <value>
                <fullName>Yet to Join</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>