force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>