force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Negotiated_Salary__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Negotiated_Salary__c</fullName>
    <label>Negotiated Salary</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>