force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Personnel__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Personnel__c</fullName>
    <label>Personnel</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>External Job Application</value>
        </filterItems>
        <filterItems>
            <field>CEMS_Personnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Applicant</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Job Application</value>
        </filterItems>
        <filterItems>
            <field>CEMS_Personnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CEMS_Personnel__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>