force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Pre_Screening__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Pre_Screening__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Screening</label>
    <referenceTo>CEMS_Pre_Screening__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>