force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Pre_Screening_Exam_Link__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Pre_Screening_Exam_Link__c</fullName>
    <label>Pre-Screening Exam Link</label>
    <type>Url</type>
</CustomField>