force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Provident_Fund__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Provident_Fund__c</fullName>
    <formula>Offered_salary__c * 0.048</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provident Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>