force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Referral__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral</label>
    <referenceTo>CEMS_Referral__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>