force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Results__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Results__c</fullName>
    <label>Results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>