force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Role__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Role__c</fullName>
    <label>Role</label>
    <length>30</length>
    <type>Text</type>
</CustomField>