force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Screening_Exam_Score__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Screening_Exam_Score__c</fullName>
    <label>Screening Exam Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>