force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Stage__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Release Offer Letter</fullName>
            </value>
            <value>
                <fullName>Decisioning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>