force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Status__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Salary Negotiation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>