force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Type__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Type__c</fullName>
    <formula>TEXT(CEMS_Personnel__r.CEMS_Type__c)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>