force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Work_Experience__c</fullName>
    <label>Work Experience</label>
    <length>10</length>
    <type>Text</type>
</CustomField>