force-app/main/default/objects/CEMS_Job_Application__c/fields/CEMS_Worked_On__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Worked_On__c</fullName>
    <label>Worked On</label>
    <length>30</length>
    <type>Text</type>
</CustomField>