force-app/main/default/objects/CEMS_Job_Application__c/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <label>Notice Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Joining</fullName>
            </value>
            <value>
                <fullName>One Month</fullName>
            </value>
            <value>
                <fullName>Two Months</fullName>
            </value>
            <value>
                <fullName>Three Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>