force-app/main/default/objects/CEMS_Job_Application__c/fields/Offered_Position__c.field-meta.xml
<CustomField>
    <fullName>Offered_Position__c</fullName>
    <label>Offered Position</label>
    <length>50</length>
    <type>Text</type>
</CustomField>