force-app/main/default/objects/CEMS_Job_Application__c/fields/Offered_salary__c.field-meta.xml
<CustomField>
    <fullName>Offered_salary__c</fullName>
    <label>Offered salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>