force-app/main/default/objects/CEMS_Job_Application__c/recordTypes/CEMS_External_Job_Application.recordType-meta.xml
<RecordType>
    <fullName>CEMS_External_Job_Application</fullName>
    <active>true</active>
    <label>External Job Application</label>
</RecordType>