force-app/main/default/objects/CEMS_Job_Application__c/recordTypes/CEMS_Internal_Application.recordType-meta.xml
<RecordType>
    <fullName>CEMS_Internal_Application</fullName>
    <active>true</active>
    <label>Internal Job Application</label>
</RecordType>