force-app/main/default/objects/CEMS_Job_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CEMS_Skills__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CEMS_First_Name__c</columns>
    <columns>CEMS_Job_Opening__c</columns>
    <columns>CEMS_Status__c</columns>
    <columns>CEMS_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>